# float

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile  package-lock.json  package.json  release-plz.toml
.github/workflows/: release-bundles.yml  release-plz.yml  ui-tests.yml
openspec/: project.md
openspec/changes/add-image-display-on-selection/: tasks.md
openspec/changes/add-multi-file-open/: tasks.md
openspec/changes/add-public-readme-and-release-docs/: proposal.md  tasks.md
openspec/changes/add-release-plz-automation/: proposal.md  tasks.md
openspec/changes/add-reset-cache-action/: proposal.md
openspec/changes/add-settings-fit-window-and-aspect-lock/: proposal.md  tasks.md
openspec/changes/add-settings-modal-appearance-controls/: proposal.md
openspec/changes/add-settings-shortcuts-tab/: proposal.md
openspec/changes/add-window-shortcuts/: design.md  proposal.md  tasks.md
openspec/changes/add-windows-cross-build/: proposal.md  tasks.md
openspec/changes/fix-fit-window-widening/: proposal.md  tasks.md
openspec/changes/move-toolbar-commands-to-menu/: proposal.md  tasks.md
openspec/changes/remove-quick-look-and-fullscreen/: proposal.md  tasks.md
openspec/changes/rename-project-to-float/: proposal.md  tasks.md
openspec/changes/update-multi-file-persistence/: proposal.md
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
test-results/: .last-run.json
tests/: tauri-driver.spec.ts  ui-mock.spec.ts
(+111 files in other folders)
