[package]
name = "always-on-top"
version = "0.1.0"
edition = "2021"
description = "Minimal macOS utility to keep a window always on top and Quick Look a selected file."
authors = ["Always On Top Team"]

[dependencies]
# Windowing/event loop for macOS GUI
winit = "0.28"
# Native file dialog
rfd = "0.14"

# macOS Cocoa bindings for menubar and actions
cocoa = "0.25"
objc = "0.2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

[package.metadata.bundle]
name = "Always On Top"
identifier = "com.example.always-on-top"
icon = []
resources = []
category = "public.app-category.utilities"
short_description = "Keep a window always on top and Quick Look a selected file."
osx_minimum_system_version = "10.13"
