[package]
name = "always-on-top-tauri"
version = "0.1.0"
description = "Always On Top - Tauri shell"
authors = ["You"]
license = "MIT OR Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
thiserror = "1"
parking_lot = "0.12"
tauri-plugin-dialog = "2"
base64 = "0.21"
tokio = { version = "1", features = ["time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
